added some extra code

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="centered">
         <h1> Welcome to Book Bank  App</h1>
         <h2> For Learners like you</h2>
-        <a href="login.html" class="button1"> Sign up</a>
+        <a href="Signup.html" class="button1"> Sign up</a>
         <a href="Terms-and-conditions.pdf" target="blank" style="margin:4em 0em 0em -18em; position:absolute;"><small>By signing up I agree the terms and condition</small></a>
         <p onclick="document.getElementById('Main-modal').style.display='block'">Already have an account? Log in</p>
       </div>
