--- a/Signup.html
+++ b/Signup.html
@@ -1,63 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Book Bank</title>
-<link rel="stylesheet" href="css/signup.css">
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css'><link rel="stylesheet" href="./style.css">
-<link rel='icon' href="pictures/icon.png" type="image/x-icon">
+  <meta charset="UTF-8">
+  <title>Sign Up page</title>
+  <link rel='icon' href="pictures/icon.png" type="image/x-icon">
+  <link rel='stylesheet' href="css/signup.css">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css'><link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="container">
+<!-- partial:index.partial.html -->
+<div class="container">
 	<div class="header">
 		<h2>Create Account</h2>
 	</div>
-  <form id="form" class="form">
-  		<div class="form-control">
-  			<label for="username">Username</label>
-  			<input type="text" placeholder="Enter User Name" id="username" />
-  			<i class="fas fa-check-circle"></i>
-  			<i class="fas fa-exclamation-circle"></i>
-  			<small>Error message</small>
-  		</div>
-  		<div class="form-control">
-  			<label for="username">Email</label>
-  			<input type="email" placeholder="info@domain.com" id="email" />
-  			<i class="fas fa-check-circle"></i>
-  			<i class="fas fa-exclamation-circle"></i>
-  			<small>Error message</small>
-  		</div>
-  		<div class="form-control">
-  			<label for="username">Password</label>
-  			<input type="password" placeholder="Password" id="password"/>
-  			<i class="fas fa-check-circle"></i>
-  			<i class="fas fa-exclamation-circle"></i>
-  			<small>Error message</small>
-  		</div>
-  		<div class="form-control">
-  			<label for="username">Confirm Password</label>
-  			<input type="password" placeholder="Confirm Password" id="password2"/>
-  			<i class="fas fa-check-circle"></i>
-  			<i class="fas fa-exclamation-circle"></i>
-  			<small>Error message</small>
-  		</div>
-      <div class="form-control">
-  			<label for="username">Phone Number</label>
-  			<input type="text" placeholder="XXX-XXX-XXX" id="phone" />
-  			<i class="fas fa-check-circle"></i>
-  			<i class="fas fa-exclamation-circle"></i>
-  			<small>Error message</small>
+	<form id="form" class="form">
+		<div class="form-control">
+			<label>Username</label>
+			<input type="text" placeholder="User Name" id="username" />
+			<i class="fas fa-check-circle"></i>
+			<i class="fas fa-exclamation-circle"></i>
+			<small>Error message</small>
+		</div>
+		<div class="form-control">
+			<label>Email</label>
+			<input type="email" placeholder="info@domain.com" id="email" />
+			<i class="fas fa-check-circle"></i>
+			<i class="fas fa-exclamation-circle"></i>
+			<small>Error message</small>
+		</div>
+		<div class="form-control">
+			<label >Password</label>
+			<input type="password" placeholder="Password" id="password"/>
+			<i class="fas fa-check-circle"></i>
+			<i class="fas fa-exclamation-circle"></i>
+			<small>Error message</small>
+		</div>
+		<div class="form-control">
+			<label>Confirm Password</label>
+			<input type="password" placeholder="Confirm Password" id="password2"/>
+			<i class="fas fa-check-circle"></i>
+			<i class="fas fa-exclamation-circle"></i>
+			<small>Error message</small>
+		</div>
+
+    <div class="form-control">
+  		<label>Phone Number</label>
+  		<input type="text" placeholder="XXX-XXX-XXX" id="phone" />
+  		<i class="fas fa-check-circle"></i>
+  		<i class="fas fa-exclamation-circle"></i>
+  		<small>Error message</small>
+    </div>
+    <div class="form-control">
+  		<label>DOB</label>
+  		<input type="text" placeholder="DD/MM/YY" id="dob" />
+  		<i class="fas fa-check-circle"></i>
+  		<i class="fas fa-exclamation-circle"></i>
+  		<small>Error message</small>
       </div>
-        <div class="form-control">
-    			<label for="username">DOB</label>
-    			<input type="text" placeholder="DD/MM/YY" id="dob" />
-    			<i class="fas fa-check-circle"></i>
-    			<i class="fas fa-exclamation-circle"></i>
-    			<small>Error message</small>
-        </div>
-  		<button class="btn">Sign up</button>
-  	</form>
+  	   <button class="btn">Sign up</button>
+  </form>
   </div>
-    <script  src="JS/Signup.js"></script>
+  <script  src="JS/Signup.js"></script>
   </body>
   </html>
