--- a/Signup.html
+++ b/Signup.html
@@ -11,7 +11,7 @@
 <!-- partial:index.partial.html -->
 <div class="container">
 	<div class="header">
-		<h2>Create Account</h2>
+		<h2>Create New Account</h2>
 	</div>
 	<form id="form" class="form">
 		<div class="form-control">
