--- a/index.html
+++ b/index.html
@@ -1,37 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Book Bank</title>
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/style2.css">
-<link rel='icon' href="pictures/icon.png" type="image/x-icon">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Signup Page</title>
+    <link rel='icon' href="pictures/icon.png" type="image/x-icon">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/menu.css">
 </head>
 <body>
-    <div id="myDiv" class="container">
-      <div class="centered">
-        <h1> Welcome to Book Bank  App</h1>
-        <h2> For Learners like you</h2>
-        <a href="Signup.html" class="button1"> Sign up</a>
-        <a href="Terms-and-conditions.pdf" target="blank" style="margin:4em 0em 0em -18em; position:absolute;"><small>By signing up I agree the terms and condition</small></a>
-        <p onclick="document.getElementById('Main-modal').style.display='block'">Already have an account? Log in</p>
-      </div>
+    <div class="registration-form">
+        <form id="form" class="form">
+            <div class="form-icon">
+                <span><i class="icon icon-user"></i></span>
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control item" id="username" placeholder="Username" />
+                <i class="fas fa-check-circle"></i>
+			          <i class="fas fa-exclamation-circle"></i>
+			          <small>Error message</small>
+            </div>
+            <div class="form-group">
+                <input type="password" class="form-control item" id="password" placeholder="Password" />
+                <i class="fas fa-check-circle"></i>
+			          <i class="fas fa-exclamation-circle"></i>
+			          <small>Error message</small>
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control item" id="password2" placeholder="Re-password" />
+                <i class="fas fa-check-circle"></i>
+			          <i class="fas fa-exclamation-circle"></i>
+			          <small>Error message</small>
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control item" id="email" placeholder="info@domain.com" />
+                <i class="fas fa-check-circle"></i>
+			          <i class="fas fa-exclamation-circle"></i>
+			          <small>Error message</small>
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control item" id="phone" placeholder="XXX-XXX-XXX" />
+                <i class="fas fa-check-circle"></i>
+			          <i class="fas fa-exclamation-circle"></i>
+			          <small>Error message</small>
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control item" id="dob" placeholder="DD/MM/YY" />
+                <i class="fas fa-check-circle"></i>
+			          <i class="fas fa-exclamation-circle"></i>
+			          <small>Error message</small>
+            </div>
+            <div>
+              <h3> Gender</h3>
+            <div class="radio">
+              <label><input type="radio" name="optradio" checked>Male</label>
+            </div>
+            <div class="radio">
+              <label><input type="radio" name="optradio">Female</label>
+            </div>
+            <div class="radio">
+              <label><input type="radio" name="optradio">Others</label>
+            </div>
+            <a href="Terms-and-conditions.pdf" target="blank">By creating account you agree the terms and Conditions click to read</a>
+            <div class="form-group">
+                <button type="button" class="create-account">Create_Account</button>
+            </div>
+          </div>
+          <div class="center">
+            <input type="checkbox" id="Checkbtn">
+            <label for="Checkbtn" class="btn">
+              <a> Already have account? Sign Up</a>
+            </label>
+            <div class="box center">
+                  <img src="pictures/img5.png" alt="Avatar" class="image2">
+                      <ul class="list">
+                        <li><strong> Member Log in</strong></li>
+                        <li><input type="text" name ="User Name" placeholder="User Name"></li>
+                        <li><input type="Password" name ="Password" placeholder="******* (Password)"></li>
+                        <li>Forget Password?</li>
+                      </ul>
+                      <a href="mainpage.html" class="button">Submit</a>
+                  <label for="Checkbtn" class="btn1">
+                    <a> Close</a>
+                  </label>
+                </div>
+            <div class="overlay"></div>
+          </div>
+        </form>
+        <div class="social-media">
+            <h5>Sign up with social media</h5>
+            <div class="social-icons">
+                <a href="#"><i class="icon-social-facebook" title="Facebook"></i></a>
+                <a href="#"><i class="icon-social-google" title="Google"></i></a>
+                <a href="#"><i class="icon-social-twitter" title="Twitter"></i></a>
+            </div>
+        </div>
   </div>
-<div id="Main-modal" class="modal">
-  <form class="animation" action="#" method="post">
-    <div class="form-container">
-      <img src="pictures/img5.png" alt="Avatar" class="image2">
-          <span onclick="document.getElementById('Main-modal').style.display='none'" class="closebtn">&times;</span>
-            <ul class="list">
-              <li><strong> Member Log in</strong></li>
-              <li><input type="text" name ="User Name" placeholder="User Name"></li>
-              <li><input type="Password" name ="Password" placeholder="******* (Password)"></li>
-              <li>Forget Password?</li>
-            </ul>
-            <a href="mainpage.html" class="button">Submit</a>
-      </div>
-  </form>
-</div>
-<script src="JS/login.js"></script>
+
+<script src="JS/Signup.js"></script>
 </body>
 </html>
