added new elements

--- a/mainpage.html
+++ b/mainpage.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Signup Page</title>
+    <title>Main Page</title>
     <link rel='icon' href="pictures/icon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
@@ -16,22 +16,22 @@
   <div class="box">
   <table border="0" cellpadding="5">
     <tr>
-      <td align="center" valign="center">
+      <td onclick='document.location="book.html"'align="center" valign="center">
         <img src="pictures/img1.jpg" alt="harry potter book" />
         <br />
         Harry Potter
       </td>
-      <td align="center" valign="center">
+      <td onclick='document.location="book.html"'align="center" valign="center">
         <img src="pictures/img2.jpg" alt="cyber Security" />
         <br />
         Cyber Security
       </td>
-      <td align="center" valign="center">
+      <td onclick='document.location="book.html"' align="center" valign="center">
         <img src="pictures/img3.png" alt="Engineering" />
         <br />
         Engineering
       </td>
-      <td align="center" valign="center">
+      <td  onclick='document.location="book.html"'align="center" valign="center">
         <img src="pictures/img6.jpg" alt="Comic" />
         <br />
         Spider man
@@ -43,22 +43,22 @@
 <div class="box">
 <table border="0" cellpadding="5">
   <tr>
-    <td align="center" valign="center">
+    <td onclick='document.location="book.html"' align="center" valign="center">
       <img src="pictures/civil.jpg" alt="Engineering book" />
       <br />
       Engineering
     </td>
-    <td align="center" valign="center">
+    <td onclick='document.location="book.html"' align="center" valign="center">
       <img src="pictures/com.jpg" alt="comics" />
       <br />
       Comics
     </td>
-    <td align="center" valign="center">
+    <td onclick='document.location="book.html"' align="center" valign="center">
       <img src="pictures/aero.jpg" alt="Aeronuatics Engineering" />
       <br />
       Aero Engineering
     </td>
-    <td align="center" valign="center">
+    <td onclick='document.location="book.html"' align="center" valign="center">
       <img src="pictures/novel1.jpg" alt="Novel" />
       <br />
       Ramayan
@@ -70,19 +70,19 @@
 <div class="box">
 <table border="0" cellpadding="5">
   <tr>
-    <td align="center" valign="center">
+    <td onclick='document.location="book.html"' align="center" valign="center">
       <img src="pictures/martin.jpg" alt="George RR martin" />
       <br />
     </td>
-    <td align="center" valign="center">
+    <td onclick='document.location="book.html"' align="center" valign="center">
       <img src="pictures/maya.jpg" alt="maya" />
       <br />
     </td>
-    <td align="center" valign="center">
+    <td onclick='document.location="book.html"' align="center" valign="center">
       <img src="pictures/jk.jpg" alt="JK Rolwiling" />
       <br />
     </td>
-    <td align="center" valign="center">
+    <td onclick='document.location="book.html"' align="center" valign="center">
       <img src="pictures/toni.jpg" alt="toni morrision" />
       <br />
     </td>
@@ -93,22 +93,22 @@
 <div class="box">
 <table border="0" cellpadding="5">
   <tr>
-    <td align="center" valign="center">
+    <td onclick='document.location="book.html"' align="center" valign="center">
       <img src="pictures/law.png" alt="Law book" />
       <br />
       Law Books
     </td>
-    <td align="center" valign="center">
+    <td onclick='document.location="book.html"' align="center" valign="center">
       <img src="pictures/doctor.png" alt="MBBS" />
       <br />
       MBBS Book
     </td>
-    <td align="center" valign="center">
+    <td onclick='document.location="book.html"' align="center" valign="center">
       <img src="pictures/novel.jpg" alt="Novel" />
       <br />
     Novel
     </td>
-    <td align="center" valign="center">
+    <td onclick='document.location="book.html"' align="center" valign="center">
       <img src="pictures/ML.png" alt="python" />
       <br />
       Machine Learning
