--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <a href="Terms-and-conditions.pdf" target="blank">By creating account you agree the terms and Conditions click to read</a>
             <div class="form-group">
-                <button type="button" class="create-account">Create_Account</button>
+                <button onclick='document.location="mainpage.html"' type="button" class="create-account">Create_Account</button>
             </div>
           </div>
           <div class="center">
