added extra things

--- a/cancel.html
+++ b/cancel.html
@@ -10,6 +10,6 @@
     <dialog-polyfill open class="box"> Your Order has been canceled. Remember you can re-order worth of same amount!!. To re-order click on <span style=" text-decoration: underline; cursor:pointer;" onclick="document.location = 'foodbank.html'">re-order button</span></dialog-polyfill>
     <dialog-polyfill open class="box"> If you click <span style="cursor:pointer; text-decoration: underline;" onclick="document.location = 'mainpage.html'">refund</span> button then you will recievce the refund in 24 hrs</dialog-polyfill>
     <a href="mainpage.html" class="button1">Refund</a>
-    <a href="foodbank.html" class="button1">Re-order</a>
+    <a href="mainpage.html" class="button1">Re-order</a>
 </body>
 </html>
