--- a/mainpage.html
+++ b/mainpage.html
@@ -118,7 +118,7 @@
 </div>
 </div>
 <Footer>
-  <i class="fas fa-user"></i>
+<a href="userinfo.html" class="fas fa-user"></a>
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
 <i class="fas fa-book"></i>
 </footer>
