added new codes

--- a/checkout.html
+++ b/checkout.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>Check out Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://yourdomain.com/apple-touch-icon-180x180.png">
   <link rel="stylesheet" href="css/checkout1.css">
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <link rel='icon' href="pictures/icon.png" type="image/x-icon">
 </head>
 <body>
@@ -33,7 +33,7 @@
           <td>$33.35</td>
         </tr>
       </table>
-      <button id="myBtn" class="fa fa-credit-card" aria-hidden="true">Order food</button>
+      <button id="myBtn" class="fa fa-credit-card" aria-hidden="true">Order</button>
       <div id="myModal" class="modal">
         <div class="modal-content">
           <i class="fa fa-check-circle"></i>
@@ -78,7 +78,7 @@
                 <label class="word">CVV</label>
                 <input type="text" name="CVV" placeholder="223">
                 <a href="confirm.html" class="button">Place Order</a>
-                <button type="button" class="btn-cancel" onclick="closeCredit()">Close</button>
+                <button type="button" class="button" onclick="closeCredit()">Close</button>
               </div>
           </div>
       </div>
