--- a/userinfo.html
+++ b/userinfo.html
@@ -5,6 +5,7 @@
   <title>User Information</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/user.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://yourdomain.com/apple-touch-icon-180x180.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel='icon' href="pictures/icon.png" type="image/x-icon">
 </head>
