--- a/book.html
+++ b/book.html
@@ -49,6 +49,11 @@
   <div class="main">
     <p>About book will be here</p>
   </div>
+  <p> Map for your local store</p>
+  <div id="map" style="
+        width: 100%;
+        height: 400px;
+        background-color: grey;"></div>
 </div>
 <p class="para"> Price: 134$ </p>
 <div id="mySidenav" class="sidenav">
@@ -129,6 +134,9 @@ function showSlides(n) {
   dots[slideIndex-1].className += " active";
 }
 </script>
+<script defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6vxL298PQEjq55wSpoObO5yLt2dF6gCw&callback=initMap">
+    </script>
 <script src="JS/checkout.js"></script>
 </body>
 </html>
