--- a/cancel.html
+++ b/cancel.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Cancel Order</title>
+<link rel="apple-touch-icon" sizes="180x180" href="https://yourdomain.com/apple-touch-icon-180x180.png">
 <link rel="stylesheet" href="css/cancel.css">
 <link rel='icon' href="pictures/icon.png" type="image/x-icon">
 </head>
