--- a/mainpage.html
+++ b/mainpage.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#317EFB"/>
     <title>Main Page</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="https://yourdomain.com/apple-touch-icon-180x180.png">
     <link rel='icon' href="pictures/icon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
@@ -116,12 +118,10 @@
   </tr>
 </table>
 </div>
-</div>
-<Footer>
 <a href="userinfo.html" class="fas fa-user"></a>
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for Book/Authors names.." title="Type in a name">
 <i class="fas fa-book"></i>
-</footer>
+</div>
   <script src="JS/mainpage.js">
   </script>
 </body>
