--- a/checkout.html
+++ b/checkout.html
@@ -38,7 +38,7 @@
         <div class="modal-content">
           <i class="fa fa-check-circle"></i>
           <h1> Payment Received!</h1>
-          <h2>Your order will be there in 25 min!</h2>
+          <h2>Your order will be there in 3,4 business days!</h2>
           <a href="mainpage.html" class="close">OK</a>
           <a href="cancel.html" class="close">Cancel order</a>
         </div>
