--- a/userinfo.html
+++ b/userinfo.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/user.css">
   <link rel="apple-touch-icon" sizes="180x180" href="https://yourdomain.com/apple-touch-icon-180x180.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <link rel='icon' href="pictures/icon.png" type="image/x-icon">
 </head>
 <body>
@@ -20,6 +21,7 @@
         <label>DOB: DD/MM/YY</label>
     <img src="https://avatars0.githubusercontent.com/u/13105865?s=400&v=4" class="user-img" alt="user">
     </div>
+    <hr>
     <div id="myNav" class="overlay">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="credit-info">
@@ -53,28 +55,41 @@
             </div>
             <p><strong>You can update your card details below:-</strong></p>
             <label class="word">Name on the Card</label>
-            <input type="text" name="cardname" placeholder="John More Doe">
+            <input class="text"type="text" name="cardname" placeholder="User Name">
             <label class="word">Credit card number</label>
-            <input type="text" name="cardnumber" placeholder="XXX-XXXX-XXXX-4444">
+            <input class="text" type="text" name="cardnumber" placeholder="XXX-XXXX-XXXX-4444">
             <label class="word">Exp Month</label>
-            <input type="text" name="expmonth" placeholder="September">
+            <input class="text" type="text" name="expmonth" placeholder="Expire Month">
             <div class="row">
               <div class="col">
                 <label class="word">Exp Year</label>
-                <input type="text" name="expyear" placeholder="2022">
+                <input class="text" type="text" name="expyear" placeholder="Expire year">
               </div>
             </div>
             <div class="row1">
               <div class="col1">
                 <label class="word">CVV</label>
-                <input type="text" name="CVV" placeholder="223">
+                <input class="text" type="text" name="CVV" placeholder="CVV">
               </div>
             </div>
             <a href="#" class="update-button">Update</a>
           </div>
         </div>
     <button class="info-btn" onclick="openNav()">credit card info</button>
-  <button class="info-btn" onclick="goBack()">Go Back</button>
+    <button id="btn" class="info-btn">Contact Us</btton>
+    <div id="Modal" class="modal">
+      <div class="modal-content">
+        <span class="close" onclick="goBack()">&times;</span>
+        <form name="form" class="popupbox" onsubmit="return validateForm()" method="post" required action="userinfo.html">
+          <h2 style="color:#000;"> Contact us</h2>
+          <input type="text" name="fname" placeholder="Your Name"/>
+          <input type="text" name="email" placeholder="info@damain.com"/>
+          <textarea type="text" name="message" placeholder="Message"></textarea>
+          <input id ="register" type="submit" class="info-btn" value="submit"/>
+        </form>
+      </div>
+    </div>
+  <button class="info-btn" onclick="window.location='mainpage.html'">Go Back</button>
 </div>
 <script src="JS/card.js"></script>
 <script src='https://kit.fontawesome.com/a076d05399.js'></script>
