--- a/book.html
+++ b/book.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Book Info Page</title>
   <link rel='icon' href="pictures/icon.png" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://yourdomain.com/apple-touch-icon-180x180.png">
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <link rel="stylesheet" href="css/book.css">
 </head>
@@ -33,9 +34,8 @@
   <span class="dot" onclick="currentSlide(2)"></span>
 </div>
 <p class="word"> Book Description </p>
-<i onclick="openNav()" class='fas fa-shopping-cart' style='font-size: 28px;
-    padding: 4px;
-    margin-left: 83%'></i>
+  <button onclick="goBack()">Back</button>
+  <i onclick="openNav()" class='fas fa-shopping-cart' style='font-size: 28px;'></i>
     <div id="checkout" class="sidnav2">
 <div class="desc">
   <p> Author: JK Rowiling</p>
@@ -99,41 +99,8 @@ color: aliceblue;">Order list</caption>
     position: absolute;">Checkout</span></a>
 </div>
 </div>
-<span style="color: #fff;
-    cursor: pointer;
-    padding: 5px;
-    background: blue;
-    border-radius: 12%;
-    display: block;
-    text-align: center" onclick="openNav()">Order Now</span>
-<script>
-var slideIndex = 1;
-showSlides(slideIndex);
-
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
-
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
-
-function showSlides(n) {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  if (n > slides.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";
-  }
-  for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";
-  dots[slideIndex-1].className += " active";
-}
-</script>
+<button onclick="openNav()">Order Now</button>
+<script src="JS/book.js"></script>
 <script defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6vxL298PQEjq55wSpoObO5yLt2dF6gCw&callback=initMap">
     </script>
