--- a/cancel.html
+++ b/cancel.html
@@ -17,12 +17,12 @@
       <div class="modal-content">
         <span class="close">&times;</span>
         <p style="color:#f1f1f1;">You will get refund within 72 hrs please fill the below form to claim the refund</p>
-        <form name="form" class="popupbox" onsubmit="return validateForm()" method="post" required action="mainpage.html">
+        <form name="form" class="popupbox" onsubmit="return validateForm()" method="post" required>
           <h2> Contact us</h2>
           <input type="text" name="fname" placeholder="Your Name"/>
           <input type="text" name="email" placeholder="info@damain.com"/>
           <textarea type="text" name="message" placeholder="Message"></textarea>
-          <input id ="register" type="submit" class="button1" value="submit"/>
+          <input id ="register" type="submit" class="button1" value="submit" onclick="window.location='mainpage.html'"/>
         </form>
       </div>
     </div>
