--- a/userinfo.html
+++ b/userinfo.html
@@ -80,12 +80,12 @@
     <div id="Modal" class="modal">
       <div class="modal-content">
         <span class="close" onclick="goBack()">&times;</span>
-        <form name="form" class="popupbox" onsubmit="return validateForm()" method="post" required action="userinfo.html">
+        <form name="form" class="popupbox" onsubmit="return validateForm()" method="post" required>
           <h2 style="color:#000;"> Contact us</h2>
           <input type="text" name="fname" placeholder="Your Name"/>
           <input type="text" name="email" placeholder="info@damain.com"/>
           <textarea type="text" name="message" placeholder="Message"></textarea>
-          <input id ="register" type="submit" class="info-btn" value="submit"/>
+          <input id ="register" type="submit" class="info-btn" onclick="window.location='userinfo.html'" value="submit"/>
         </form>
       </div>
     </div>
